[tool.poetry]
name = "thisgalaxydoesnotexist"
version = "0.1.0"
description = ""
authors = ["lbignone <lbignone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
