[tool.poetry]
name = "thisgalaxydoesnotexist"
version = "0.1.0"
description = ""
authors = ["lbignone <lbignone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
streamlit = "^1.8.1"
s3fs = "^2022.5.0"
protobuf = "^3.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
